# MPXCCP

./: .gitignore  AGENTS.md  README.md  pyproject.toml  开发设计方案.md  开发需求文档.md
docs/: 阶段记录.md  验收清单.md
mpxccp/: __init__.py  bootstrap.py  main.py
mpxccp/config/: logging.py  paths.py  settings.py
mpxccp/domain/: __init__.py  association_rules.py  constants.py  enums.py  issue_templates.py  quant_rules.py  scoring_rules.py
mpxccp/integration/: __init__.py
mpxccp/models/: __init__.py  base.py  basic_info.py  knowledge.py  project.py  scoring.py  shared.py  technical_application.py  technical_device.py  technical_network.py  technical_physical.py
mpxccp/repositories/: application_repo.py  basic_info_repo.py  device_repo.py  knowledge_repo.py  network_repo.py  physical_repo.py  project_repo.py  scoring_repo.py  session.py  shared_repo.py
mpxccp/services/: application_service.py  basic_info_service.py  device_service.py  evidence_service.py  export_service.py  import_service.py  integrity_service.py  knowledge_service.py  migration_service.py  network_service.py  physical_service.py  product_service.py  project_service.py  quant_service.py  result.py  risk_service.py  scoring_service.py
mpxccp/ui/: main_window.py
scripts/: build_windows.ps1  check_resources.ps1
tests/: conftest.py
tests/fixtures/: sample_data.py  workbook_builders.py
tests/integration/: test_application_service.py  test_basic_info_service.py  test_database_schema.py  test_device_service.py  test_end_to_end_workflow.py  test_evidence_service.py  test_excel_export.py  test_excel_import.py  (+12 more)
(+48 files in other folders)
