[project]
name = "mpxccp"
version = "0.1.0"
description = "商用密码应用安全性评估实施工具"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.7",
  "SQLAlchemy>=2.0",
  "openpyxl>=3.1",
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
  "ruff>=0.5",
  "pyinstaller>=6.0",
]

[project.scripts]
mpxccp = "mpxccp.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
